panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__parse_error__test_error_integer_instead_of_identifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/parse_error/test_error_integer_instead_of_identifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unexpected token `42` of kind `Integer(Integer { suffix: None, suffix_len: 0, base: 10, prefix_len: 0 })`
   ╭─[panko/tests/cases/parse_error/test_error_integer_instead_of_identifier.c:1:5]
   │
 1 │ int 42;
   │     ─┬  
   │      ╰── expected one of the following token kinds: [";", ",", "=", "*", "(", "[", "auto", "constexpr", "extern", "register", "static", "thread_local", "typedef", "struct", "void", "char", "short", "int", "long", "float", "double", "signed", "unsigned", "bool", "_Complex", "_Decimal32", "_Decimal64", "_Decimal128", "typeof", "typeof_unqual", "const", "restrict", "volatile", "_Atomic", "inline", "_Noreturn", Identifier, TypedefName]
───╯
